--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-paper": "^4.2.0",
+    "react-native-progress": "^4.1.2",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
