--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
+    "react-native-appearance": "~0.3.3",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-paper": "^4.2.0",
     "react-native-progress": "^4.1.2",
@@ -26,7 +27,11 @@
     "react-native-safe-area-context": "^3.1.4",
     "react-native-screens": "^2.10.1",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "10.7.0",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "expo-ads-admob": "~8.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
